--- a/MVC/Views/Home/Game.cshtml
+++ b/MVC/Views/Home/Game.cshtml
@@ -9,6 +9,7 @@
 <section class="input-section">
     <div class="left-side">
         <h5>@Html.DisplayFor(m => m)</h5>
+        <h5>@Html.DisplayFor(m => m.Nombre)</h5>
         <input maxlength="8" class="word-input" placeholder="Ingresar palabra" />
         <button class="intentar-button">Intentar!</button>
     </div>
